--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@
 #about {
   margin-top: 3rem;
   margin-bottom: 3rem; 
-  margin-left: 3rem;
-  margin-right: 3rem;
-  text-indent: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .about-text {
