--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
   width: 150px;
   height: 150px;
   object-fit: cover;
+  border: 6px solid white;
+  display: inline-block;
   border: 4px solid rgba(255,255,255,0.06);
   border-radius: 50%;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
