--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 }
 
 .profile-pic {
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   object-fit: cover;
-  border: 3px solid white;
+  border: 3rem solid white;
   display: inline-block;
   border: 4px solid rgba(255,255,255,0.06);
   border-radius: 50%;
